--- a/sass/theme/_fullscreen.scss
+++ b/sass/theme/_fullscreen.scss
@@ -2,11 +2,10 @@
     .fullscreen{
         position: absolute;
         z-index: -1;
-        // height: 100vh;
+        height: 100vh;
         width: 100%;
         top: 0;
         overflow: hidden;
-        height: -webkit-fill-available;
         .carousel{
             min-height: 100%;
             min-width: 100%;
@@ -14,15 +13,24 @@
                 height: 100%;
                 min-width: 100%;
                 div.fullscreen-slide{                   
+                    // max-width: 100%;
+                    // max-height: 100%;
+                    // bottom: 0;
+                    // left: 0;
+                    // margin: auto;
+                    // overflow: auto;
+                    // position: fixed;
+                    // right: 0;
+                    // top: 0;
+                    // -o-object-fit: contain;
+                    // object-fit: contain;
                     a {}
                     img.image {
-                        min-width: 100%;
-                        // max-width:100%;
-                        height:auto;
-                        // max-height:100%;
-                    }                    
+                        min-height: 100vh;
+                        width: 100%;
+                    }
                 }
-            }    
+            }
         }
     }
 }
