--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -1,7 +1,20 @@
 // Use this file to overwrite the basic Bootstrap variables and add your own variables
-// To overwrite a Bootstrap variable you don´t have to touch the Bootstrap folder.
-// Just copy a variable from src/sass/bootstrap4/_variables.scss, paste it here and edit the value.
+// To overwrite a Bootstrap variable you don´t have to touch the Bootstrap folder. 
+// Just copy a variable from /sass/bootstrap/_variables.scss, paste it here and edit the value.
+// As example you find one of the most important Bootstrap variable below: $brand-primary.
+// Thats the ugly Bootstrap blue used for all the links, primary buttons etc.
+// Just add your color code here, compile the theme.scss file to change this color everywhere
 
+//
+// Color system
+//
 
-$purple: #5533ff; // Thats a sample how you could change a BootStrap variable.
-$primary: $purple;  // Once we've changed the value, we'll also make it the primary brand color.
+$brandcolor:#d9141e;
+
+.btn-primary {
+    @include button-variant($brandcolor, darken($brandcolor, 7.5%), darken($brandcolor, 10%), lighten($brandcolor,5%), lighten($brandcolor, 10%), darken($brandcolor,30%));
+}
+
+.btn-outline-primary {
+    @include button-outline-variant($brandcolor, #222222, lighten($brandcolor,5%), $brandcolor);
+}
