--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -14645,6 +14645,24 @@ figure.woocommerce-product-gallery__wrapper {
   background-color: #fff;
   background-color: rgba(255, 255, 255, 0.8);
 }
+@-webkit-keyframes panltr {
+  from {
+    object-position: 0% 0%;
+  }
+  to {
+    object-position: 100% 100%;
+  }
+}
+@keyframes panltr {
+  from {
+    -o-object-position: 0% 0%;
+    object-position: 0% 0%;
+  }
+  to {
+    -o-object-position: 100% 100%;
+    object-position: 100% 100%;
+  }
+}
 #wrapper-hero .fullscreen {
   position: absolute;
   z-index: -1;
@@ -14661,9 +14679,24 @@ figure.woocommerce-product-gallery__wrapper {
   height: 100%;
   min-width: 100%;
 }
-#wrapper-hero .fullscreen .carousel .carousel-inner div.fullscreen-slide img.image {
+#wrapper-hero .fullscreen .carousel .carousel-inner div.fullscreen-slide.carousel-item {
+  min-width: 100%;
+}
+#wrapper-hero .fullscreen .carousel .carousel-inner div.fullscreen-slide figure.wp-block-image img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: top left;
+  object-position: top left;
   min-height: 100vh;
-  width: 100%;
+  min-width: 100%;
+  position: relative;
+  -webkit-animation: panltr 7s alternate infinite 2s;
+  animation: panltr 7s alternate infinite 2s;
+}
+#wrapper-hero .fullscreen .carousel .carousel-inner div.fullscreen-slide figure.wp-block-gallery img {
+  min-width: 100%;
+  width: auto;
+  height: 100vh;
 }
 
 .cover {
