--- a/src/sass/theme/_fullscreen.scss
+++ b/src/sass/theme/_fullscreen.scss
@@ -1,3 +1,12 @@
+@keyframes panltr {
+    from {
+        object-position: 0% 0%;
+    }
+    to {
+        object-position: 100% 100%;
+    }
+}
+
 #wrapper-hero {
     .fullscreen{
         position: absolute;
@@ -12,28 +21,37 @@
             .carousel-inner{
                 height: 100%;
                 min-width: 100%;
-                div.fullscreen-slide{                   
-                    // max-width: 100%;
-                    // max-height: 100%;
-                    // bottom: 0;
-                    // left: 0;
-                    // margin: auto;
-                    // overflow: auto;
-                    // position: fixed;
-                    // right: 0;
-                    // top: 0;
-                    // -o-object-fit: contain;
-                    // object-fit: contain;
-                    a {}
-                    img.image {
-                        min-height: 100vh;
-                        width: 100%;
+                div.fullscreen-slide{
+                    &.carousel-item {
+                        min-width: 100%;
+                    }
+                    figure {
+                        &.wp-block-image {
+                            img {
+                                object-fit: cover;
+                                object-position: top left;
+                                min-height: 100vh;
+                                min-width: 100%;
+                                position: relative;
+                                animation: panltr 7s alternate infinite 2s;
+                                // look into using http://slideshowify.com/ for the kenburns effect pan
+                            }
+                        }
+                        &.wp-block-gallery {
+                            // cycle through li items in gallery
+                            img {
+                                min-width: 100%;
+                                width: auto;
+                                height: 100vh;
+                            }
+                        }
                     }
                 }
             }
         }
     }
 }
+
 
 .cover {
     height: 100%;
