--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -14704,6 +14704,20 @@ figure.woocommerce-product-gallery__wrapper {
 }
 
 /* Add general styles here*/
+.site-main body {
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+}
+
+h1.entry-title {
+  font: 300 15px/1.625 "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  position: relative;
+  display: inline-block;
+  font-weight: 100;
+  letter-spacing: 6px;
+  line-height: 34px;
+  font-size: 42px;
+}
+
 #wrapper-navbar #main-nav {
   background-color: #FFFFFF8A !important;
   background-color: rgba(255, 255, 255, 0.8);
