--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -18,3 +18,8 @@
 // .btn-outline-primary {
 //     @include button-outline-variant($brandcolor, #222222, lighten($brandcolor,5%), $brandcolor);
 // }
+
+// stylelint-disable value-keyword-case
+$font-family-sans-serif:      "Lato","Helvetica Neue",Helvetica,Arial,sans-serif !default;
+$font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+$font-family-base:            $font-family-sans-serif !default;
