--- a/src/sass/theme/_general.scss
+++ b/src/sass/theme/_general.scss
@@ -11,7 +11,18 @@
     }    
 }
 
-// .site {
-//     background-color: #bbb;
-// }
+.site-main {
+    body {
+        font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif !important;
+    }
+}
 
+h1.entry-title {
+    font: 300 15px/1.625 "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    position: relative;
+    display: inline-block;
+    font-weight: 100;
+    letter-spacing: 6px;
+    line-height: 34px;
+    font-size: 42px;
+}
