--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -14679,6 +14679,17 @@ figure.woocommerce-product-gallery__wrapper {
   height: 100%;
   min-width: 100%;
 }
+#wrapper-hero .fullscreen .carousel .carousel-inner div.fullscreen-slide img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: top left;
+  object-position: top left;
+  min-height: 100vh;
+  min-width: 100%;
+  position: relative;
+  -webkit-animation: panltr 7s alternate infinite 2s;
+  animation: panltr 7s alternate infinite 2s;
+}
 #wrapper-hero .fullscreen .carousel .carousel-inner div.fullscreen-slide.carousel-item {
   min-width: 100%;
 }
