--- a/src/sass/theme/_fullscreen.scss
+++ b/src/sass/theme/_fullscreen.scss
@@ -22,6 +22,15 @@
                 height: 100%;
                 min-width: 100%;
                 div.fullscreen-slide{
+                    img {
+                        object-fit: cover;
+                        object-position: top left;
+                        min-height: 100vh;
+                        min-width: 100%;
+                        position: relative;
+                        animation: panltr 7s alternate infinite 2s;
+                        // adds widget compatibility
+                    }
                     &.carousel-item {
                         min-width: 100%;
                     }
