--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -3,75 +3,4 @@
 @import 'fullscreen';
 @import 'general';
 @import 'navigation';
-
-body{
-  font: 300 15px/1.625 "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
-
-  &.page-template-default, &.page-template{
-    background-color: rgba(255,255,255,0.8);
-    background-blend-mode: overlay;
-
-    .entry-content {
-      // font:  300 15px/1.625 "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
-      letter-spacing: 0.5px;
-      line-height: 22px;
-      color: rgba(0, 0, 0, 0.7);
-      font-weight: 400;
-      p{
-        font: 14px "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
-        padding: 0;
-        border: 0;
-        outline: 0;
-        font-weight: inherit;
-        font-style: inherit;
-        font-size: 100%;
-        font-family: inherit;
-        vertical-align: baseline;
-        margin-bottom: 20px;
-      }
-    }
-  }
-
-  #right-sidebar {
-    .widget_block {
-      a {
-        color:#83a332;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-weight: bold;
-        line-height: 14px;
-        font-size: 14px;
-      }
-      .wp-block-group__inner-container {
-        .wp-block-latest-posts.wp-block-latest-posts__list{
-          list-style: none;
-          li {
-            padding-left: 35px;
-            padding-bottom: 35px;
-            a {
-              color:#83a332;
-              text-decoration: none;
-              text-transform: uppercase;
-              font-weight: bold;
-              line-height: 14px;
-              font-size: 14px;
-            }
-            &:before{
-              content: "\f00c";  
-              font-family: FontAwesome;
-              display: inline-block;
-              // margin-left: -1.3em;
-              margin-left: -35px;
-              // width: 1.3em;
-              width: 35px;
-              height: 35px;
-              color: #000;
-              float: left
-            }
-          }
-        }
-      }
-    }
-  }
-
-}
+@import 'sidebar';
