--- a/src/sass/theme/_sidebar.scss
+++ b/src/sass/theme/_sidebar.scss
@@ -33,7 +33,7 @@
             width: 35px;
             height: 35px;
             color: #000;
-            float: left
+            float: left;
           }
         }
       }
