--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -14810,14 +14810,14 @@ body.page-template-default .entry-content p, body.page-template .entry-content p
   line-height: 14px;
   font-size: 14px;
 }
-#right-sidebar .widget_block .wp-block-group__inner-container .wp-block-latest-posts.wp-block-latest-posts__list {
+#right-sidebar .widget_block .wp-block-latest-posts.wp-block-latest-posts__list {
   list-style: none;
 }
-#right-sidebar .widget_block .wp-block-group__inner-container .wp-block-latest-posts.wp-block-latest-posts__list li {
+#right-sidebar .widget_block .wp-block-latest-posts.wp-block-latest-posts__list li {
   padding-left: 35px;
   padding-bottom: 35px;
 }
-#right-sidebar .widget_block .wp-block-group__inner-container .wp-block-latest-posts.wp-block-latest-posts__list li a {
+#right-sidebar .widget_block .wp-block-latest-posts.wp-block-latest-posts__list li a {
   color: #83a332;
   text-decoration: none;
   text-transform: uppercase;
@@ -14825,7 +14825,7 @@ body.page-template-default .entry-content p, body.page-template .entry-content p
   line-height: 14px;
   font-size: 14px;
 }
-#right-sidebar .widget_block .wp-block-group__inner-container .wp-block-latest-posts.wp-block-latest-posts__list li:before {
+#right-sidebar .widget_block .wp-block-latest-posts.wp-block-latest-posts__list li:before {
   content: "\f00c";
   font-family: FontAwesome;
   display: inline-block;
@@ -14833,7 +14833,6 @@ body.page-template-default .entry-content p, body.page-template .entry-content p
   width: 35px;
   height: 35px;
   color: #000;
-  float: left;
 }
 
 .has-blue-color,
