--- a/src/sass/theme/_sidebar.scss
+++ b/src/sass/theme/_sidebar.scss
@@ -24,15 +24,14 @@
           font-size: 14px;
         }
         &:before{
-          content: "\f00c";  
+          content: "\f00c";
           font-family: FontAwesome;
-          display: inline-block;
-          // margin-left: -1.3em;
           margin-left: -35px;
-          // width: 1.3em;
           width: 35px;
           height: 35px;
           color: #000;
+          display: block;
+          float: left;
         }
       }
     }
